# toybox

./: README.md
adversarial-review-arena/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
adversarial-review-arena/.config/battle/: arena.json
adversarial-review-arena/.config/default/: arena.json  prompt.txt
adversarial-review-arena/.config/freestyle/: arena.json  prompt.txt
adversarial-review-arena/.config/slack/: arena.json  prompt.txt
adversarial-review-arena/src/: index.html  main.ts  styles.css
adversarial-review-arena/src-tauri/: Cargo.toml  tauri.conf.json
adversarial-review-arena/src-tauri/icons/: icon.icns
adversarial-review-arena/src-tauri/src/: lib.rs  main.rs
